<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.FishermenActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@id/welcomeText"
        android:layout_marginTop="10dp"
        android:text="Fisherman"
        android:textStyle="bold"
        android:textSize="22sp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_centerInParent="true">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <LinearLayout
            android:id="@+id/addLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_add_circle"
                android:contentDescription="@string/addProduct"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/addProduct"
                android:textSize="20sp"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/productIDLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/productIDMessage"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/productIDText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:text="@string/addProduct"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="5dp"
                android:text="@string/done"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/formLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/companyTextLayout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:textColorHint="@color/black"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/companyText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/companyName"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fishTypeTextLayout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:textColorHint="@color/black"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fishTypeText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/fishType"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:textColorHint="@color/black"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/timeCaughtText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/dateCaught"
                    android:inputType="date"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/locationTextLayout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="2dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:textColorHint="@color/black"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/locationText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/where"
                    android:inputType="text"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_margin="5dp"
                android:text="@string/submit"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:text="@string/logout"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp"/>

</RelativeLayout>