<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameTextLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint="@color/black"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint="@color/black"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobTextLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint="@color/black"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/mobile"
                android:inputType="number"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userTypeLayout"
            android:layout_height="wrap_content"
            android:layout_width="350dp"
            android:layout_margin="10dp"
            android:hint="@string/selectType"
            android:textColorHint="@color/black"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            android:layout_gravity="center"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userRole"
                android:inputType="none"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:drawableEnd="@drawable/ic_arrow_drop_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            app:endIconTint="@color/colorAccent"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint="@color/black"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confPasswordTextLayout"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:boxStrokeColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            app:endIconTint="@color/colorAccent"
            app:endIconMode="password_toggle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:textColorHint="@color/black"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confPasswordText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/confPassword"
                android:inputType="textPassword"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:layout_below="@id/signUpLayout"
        android:layout_margin="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ProgressBar
            android:id="@+id/signUpProgress"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:visibility="gone"/>

    </LinearLayout>

</RelativeLayout>